# bale

./: .gitignore  README.md
.github/workflows/: dockerimage.yml
docs/: README.md
example_matrices/: directed_flat_100.mm  directed_geometric_100.mm  er_100_0.2.dst  er_100_0.2.mm  kron_1:3x4x5.mm  sparse100.dst  sparse100.mm  toposort_input.mm  undirected_flat_100.mm  undirected_geometric_100.mm
src/bale_classic/: DEMO.md  Doxyfile  INSTALL.md  README.md  acinclude.m4  bootstrap.sh  mainpage.h  make_bale  plot_results.ipynb  run_apps.py
src/bale_classic/apps/: .gitignore  Makefile.am  README.md  configure.ac  conftest.py
src/bale_classic/apps/histo_src/: README.md  histo.h  histo.upc  histo_agp.upc  histo_conveyor.upc  histo_exstack.upc  histo_exstack2.upc
src/bale_classic/apps/histo_src/alternates/: histo_alternates.h  histo_exstack2_cyclic.upc  histo_exstack2_function.upc  histo_exstack2_goto.upc  histo_exstack_function.upc
src/bale_classic/apps/ig_src/: README.md  ig.h  ig.upc  ig_agp.upc  ig_conveyor.upc  ig_exstack.upc  ig_exstack2.upc
src/bale_classic/apps/ig_src/alternates/: ig_alternates.h  ig_exstack2_cyclic.upc  ig_exstack2_goto.upc  ig_exstack_function.upc  ig_exstack_pkg.upc
src/bale_classic/apps/permute_matrix_src/: README.md  permute_matrix.upc
src/bale_classic/apps/permute_matrix_src/alternates/: permute_matrix_alternates.h
src/bale_classic/apps/randperm_src/: README.md  randperm.upc  randperm_alternates.h
src/bale_classic/apps/randperm_src/alternates/: randperm_agp_opt.upc
src/bale_classic/apps/sparse_matrix_io_src/: README.md  sparse_matrix_io.upc
src/bale_classic/apps/sssp_src/: README.md  sssp.h  sssp.upc  sssp_bellman_conveyor.upc  sssp_bellman_exstack.upc  sssp_bellman_exstack2.upc  sssp_delta_common.h  sssp_delta_common.upc  sssp_delta_conveyor.upc  sssp_delta_exstack.upc  sssp_delta_exstack2.upc
src/bale_classic/apps/sssp_src/alternates/: sssp_alternates.h  sssp_bellman_agp.upc
src/bale_classic/apps/tests/: test_all.py
src/bale_classic/apps/topo_src/: README.md  toposort.h  toposort.upc  toposort_agp.upc  toposort_conveyor.upc  toposort_exstack.upc  toposort_exstack2.upc
src/bale_classic/apps/topo_src/alternates/: toposort_agp_oo.upc  toposort_alternates.h  toposort_cooler.upc  toposort_exstack_orig.upc
src/bale_classic/apps/transpose_matrix_src/: README.md  transpose_matrix.upc
src/bale_classic/apps/transpose_matrix_src/alternates/: transpose_matrix_alternates.h
src/bale_classic/apps/triangle_src/: README.md  triangle.h  triangle.upc  triangle_agp.upc  triangle_conveyor.upc  triangle_exstack.upc  triangle_exstack2.upc
src/bale_classic/apps/triangle_src/alternates/: triangle_agp_iter.upc  triangle_agp_oo.upc  triangle_agp_opt1.upc  triangle_agp_opt2.upc
src/bale_classic/apps/union_find/: README.md
src/bale_classic/convey/: .gitignore  Doxyfile.in  INSTALL  LICENSE  MAINTAIN  Makefile.am  README.md  a2a_align.c  a2a_apps.c  a2a_basic.c  accel.c  alltoallv.c  alltoallv.h  bench_simple.awk  bench_tensor.awk  biconvey.c  biconvey.h  biconvey_impl.h  bisimple.c  bitensor.c  bolite.h  cases.pl  circle.c  codata.c  common.c  common.h  configure.ac  convey.c  convey.h  convey.pc.in  convey_alc8r.h  convey_codec.h  convey_impl.h  elastic.c  getput.c  launchinfo  mpiport.c  mpp2mpi.c  mpp2mpi.h  mpp2nil.c  (+34 more)
src/bale_classic/convey/examples/: bigather.c  example.h  gather.c  histo.c  meld.c
src/bale_classic/convey/m4/: acx_pthread.m4  doxygen.am
src/bale_classic/exstack/: Makefile.am  README.md  configure.ac  exstack.h  exstack.pc.in  exstack.upc  exstack2.upc  exstack2_shmem.c
src/bale_classic/libgetput/: Makefile.am  README.md  configure.ac  libgetput.h  libgetput.pc.in  libgetput.upc
src/bale_classic/spmat/: Makefile.am  README.md  configure.ac  geometric.upc  spmat.h  spmat.pc.in  spmat_agp.upc  spmat_conveyor.upc  spmat_enums.h  spmat_exstack.upc  spmat_exstack2.upc  spmat_io.upc  spmat_utils.upc
src/bale_classic/std_options/: Makefile.am  README.md  configure.ac  std_options.h  std_options.pc.in  std_options.upc
src/other_parallel/Chapel/: Makefile  README.md  histo.chpl  ig.chpl  spmat.chpl  topo.chpl  triangle.chpl
src/other_parallel/Rust/: .gitignore  Cargo.toml  README.md  README_cray.md
src/other_parallel/Rust/convey/: .gitignore  Cargo.toml  LICENSE  README.md  README_cray.md
src/other_parallel/Rust/convey/examples/: collect_convey.rs  histo_convey.rs  ig_convey.rs
src/other_parallel/Rust/convey/pshmem-experimental/: Cargo.toml
src/other_parallel/Rust/convey/pshmem-experimental/src/: collect.rs  error.rs  lib.rs  main.rs  object.rs
src/other_parallel/Rust/convey/shmem/: Cargo.toml  README.md
src/other_parallel/Rust/convey/shmem-sys/: Cargo.toml  build.rs
src/other_parallel/Rust/convey/shmem-sys/src/: lib.rs  wrapper.h
src/other_parallel/Rust/convey/shmem/examples/: histo_shmem.rs
src/other_parallel/Rust/convey/shmem/src/: atomic.rs  collect.rs  error.rs  lib.rs  object.rs  shmem.rs
src/other_parallel/Rust/convey/src/: chapter_1.md  collect.rs  lib.rs  session.rs  shmem_buffers.rs  testing_support.rs
src/other_parallel/Rust/delta_stepping/: .gitignore  Cargo.toml  README.md
src/other_parallel/Rust/delta_stepping/src/: lib.rs  main.rs
src/other_parallel/Rust/scripts/: fixmodules.sh
src/other_parallel/Rust/spmat/: Cargo.toml
src/other_parallel/Rust/spmat/scripts/: permute_convey.sh  randperm_convey.sh
src/other_parallel/Rust/spmat/src/: lib.rs  perm.rs
src/other_parallel/Rust/src/: lib.rs
src/other_parallel/Rust/toposort/: Cargo.toml
src/other_parallel/Rust/toposort/scripts/: toposort.sh
src/other_parallel/Rust/toposort/src/: lib.rs  main.rs
src/other_parallel/Rust/triangle/: Cargo.toml
src/other_parallel/Rust/triangle/src/: lib.rs  main.rs
src/other_serial/C/: Doxyfile  Makefile  README.md  conftest.py  default_app_opts.h  (+33 more)
src/other_serial/Rust/delta_stepping/: .gitignore  Cargo.toml  README.md
src/other_serial/Rust/delta_stepping/src/: lib.rs  main.rs
src/other_serial/Rust/sparsemat/: Cargo.toml
src/other_serial/Rust/sparsemat/src/: err.rs  lib.rs
(+15 files in other folders)
